Fix Overflow Bug

--- a/src/sass/animations.sass
+++ b/src/sass/animations.sass
@@ -17,7 +17,6 @@
     -webkit-box-shadow: rgba(0,0,0,0.25) 0px 4px 10px
     box-shadow: rgba(0,0,0,0.25) 0px 4px 10px
     font-size: 18px
-    z-index: -1
     transform: rotate(45deg)
     -webkit-clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%)
     clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%)
@@ -43,7 +42,7 @@
       margin-left: 57px
 
   &.active
-    z-index: 500
+    z-index: 1
     animation: button-pop-bg .75s ease both
 
     &::before
