--- a/src/sass/elements.sass
+++ b/src/sass/elements.sass
@@ -23,7 +23,7 @@
       opacity: 0.65
       width: 100%
       height: 100%
-      z-index: -5
+      z-index: -1
     &::after
       content: attr(node-content)
       position: absolute
@@ -33,14 +33,14 @@
       opacity: 0.65      
       width: 100%
       height: 100%
-      z-index: -5
+      z-index: -1
 
   &__bottom
     display: grid
     grid-template-columns: repeat(4, 60px)
     -moz-text-size-adjust: 50%
     color: #f0e4fa
-    overflow: auto
+    overflow: visible
 
 .button
   border: none
@@ -59,7 +59,6 @@
   -moz-user-select: none
   -ms-user-select: none
   user-select: none
-  z-index: 10
   
 
   &:nth-child(4),
